# sde-kit

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  IMPLEMENTATION.md  LICENSE  README.md  SDE-KIT-REVIEW.md  package-lock.json  package.json  plan.md
.github/workflows/: ci.yml  release.yml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: generic.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
apps/desktop/: .eslintrc.json  README.md  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  watcher.rs
apps/desktop/src-tauri/src/commands/: fs.rs  graph.rs  mod.rs
apps/desktop/src-tauri/src/models/: mod.rs
apps/desktop/src-tauri/src/persistence/: mod.rs
apps/desktop/src/lib/components/: ActivityBar.svelte  BottomPanel.svelte  CodeEditor.svelte  CommandBar.svelte  CommandPalette.svelte  Dashboard.svelte  DiffViewer.svelte  ErrorBoundary.svelte  FileExplorer.svelte  FileTree.svelte  GitPanel.svelte  GraphPanel.svelte  KeyboardShortcuts.svelte  MainContent.svelte  MilestonesPanel.svelte  NotesPanel.svelte  PomodoroPanel.svelte  ProjectsPanel.svelte  SearchPanel.svelte  Sidebar.svelte  TasksPanel.svelte  TerminalPanel.svelte  Workspace.svelte
apps/desktop/src/routes/: +error.svelte  +layout.svelte  +page.svelte
crates/graph/: Cargo.toml
crates/graph/src/: layout.rs  lib.rs  types.rs
scripts/: build.sh  release.sh  validate.sh
(+19 files in other folders)
