[package]
name = "sde-kit"
version = "0.1.0"
description = "Local-First SDLC Desktop Platform"
authors = ["SDE Kit Contributors"]
license = "MIT"
repository = "https://github.com/pallab-js/SDE-KIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
notify = "8"
sde-kit-graph = { path = "../../../crates/graph" }


